package com.capstone.pacetime;

public enum BreathState {
    INHALE,
    EXHALE
}
