package com.capstone.pacetime;

public enum RunInfoUpdateFlag {
    TRACE,
    DISTANCE,
    PACE,
    RUNNING_TIME,
    STEP_COUNT,
    CADENCE
}
