package com.capstone.pacetime;

public abstract class RunInfoViewModel {
}
