package com.capstone.pacetime.receiver;

public interface StartStopInterface {
    void start();
    void stop();
}
